@@ -2,6 +2,8 @@ Changes
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -42,19 +44,19 @@ t/data/tag1.pyx
 t/data/tag2.pyx
 t/data/tag3.pyx
 t/data/tag4.pyx
-t/PYX-Parser/00-use.t
-t/PYX-Parser/01-version.t
-t/PYX-Parser/02-pod_coverage.t
-t/PYX-Parser/03-pod.t
-t/PYX-Parser/04-new.t
-t/PYX-Parser/05-parse_file.t
-t/PYX-Parser/06-rewrite.t
-t/PYX/00-use.t
-t/PYX/01-version.t
-t/PYX/02-pod_coverage.t
-t/PYX/03-pod.t
-t/PYX/04-char.t
-t/PYX/05-start_element.t
-t/PYX/06-end_element.t
-t/PYX/07-instruction.t
-t/PYX/08-comment.t
+t/PYX-Parser/01-use.t
+t/PYX-Parser/02-version.t
+t/PYX-Parser/03-new.t
+t/PYX-Parser/04-parse_file.t
+t/PYX-Parser/05-rewrite.t
+t/PYX/01-use.t
+t/PYX/02-version.t
+t/PYX/03-char.t
+t/PYX/04-start_element.t
+t/PYX/05-end_element.t
+t/PYX/06-instruction.t
+t/PYX/07-comment.t
+xt/PYX-Parser/01-pod_coverage.t
+xt/PYX-Parser/02-pod.t
+xt/PYX/01-pod_coverage.t
+xt/PYX/02-pod.t
