@@ -10,8 +10,6 @@ build_requires:
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 1.02
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -27,6 +25,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Class::Utils: 0.05
   Error::Pure: 0.16
